--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,17 @@ input[type="search"]:focus {
         border-radius: 0 ;
         overflow-y: scroll;
         max-width: 300px;
+        padding: 5px;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        overflow: visible;
+        background: var(--background);
+        position: relative;
+        z-index: 1;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
     }
     .main .blur .preview img{
         border-radius: 0 ;
@@ -146,7 +157,7 @@ input[type="search"]:focus {
     border-radius: 50px 50px 0 0;
 }
 
-.main div {
+.main .card {
     --background: linear-gradient( #c53333 0%, #551215 100%);
     width: 90%;
     padding: 5px;
@@ -233,6 +244,23 @@ button:hover {
     justify-content: center;
     align-items: center;
 
+}
+.main .preview.dc{
+    background: linear-gradient(to left, rgb(0, 43, 112), rgb(17, 86, 216));
+}
+.main .preview.dc button{
+    background: rgb(0, 43, 112);
+
+    transition: all;
+
+}
+.main .preview.dc button:hover{
+    background: rgb(0, 65, 170);
+    transform: scale(1.2);
+    transition-duration: .5s;
+}
+.main .preview.marvel{
+    background: linear-gradient(to left, #c53333 0%, #551215 100%); 
 }
 .main .preview{
     display: grid;
